<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.circlepix.android.WizardLeadsActivity$PlaceholderFragment" >

<!-- 
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lead_label" />
-->

    <CheckBox
        android:id="@+id/LeadPropSite"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lead_propsite_text" >
    </CheckBox>

    <CheckBox
        android:id="@+id/LeadLeadbee"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lead_leadbee_text" >
    </CheckBox>

    <CheckBox
        android:id="@+id/LeadFacebook"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lead_facebook_text" >
    </CheckBox>

    <CheckBox
        android:id="@+id/LeadMobile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lead_mobile_text" >
    </CheckBox>

    <CheckBox
        android:id="@+id/LeadOpenHousee"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lead_open_house_text" >
    </CheckBox>

</LinearLayout>
