<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/circlepix_bg"
    android:orientation="vertical"
    android:padding="10dip"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <!-- Top Row -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_website"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/account_circlepix"
            android:textColor="#000000" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="16sp"
            android:text="@string/account_verified"
            android:textColor="@color/verified_green" />

    </LinearLayout>

    <!-- Second Row -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:text="@string/login_username"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/account_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp"
            android:inputType="text"
            android:textColor="@color/colorPrimary"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:background="@drawable/edit_text_rounded" />

    </LinearLayout>

    <!-- Third Row -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:text="@string/login_password"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/account_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="center"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:background="@drawable/edit_text_rounded" />

    </LinearLayout>

    <!-- Bottom Row -->
    <Button
        android:id="@+id/logout_button"
        android:layout_width="90dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/circlepix_button_selector"
        android:layout_margin="5dip"
        android:padding="10dip"
        android:text="@string/login_log_out"
        android:textColor="#FFFFFF" />

</LinearLayout>