<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/circlepix_bg"
    android:orientation="vertical">

    <!-- The login screen -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView24"
            android:src="@drawable/logo_lt"
            android:scaleType="centerInside"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dip"
        android:background="@color/colorAccent" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_prompt_big"
            android:gravity="center"
            android:id="@+id/textView6"
            android:textSize="16sp"
            android:paddingBottom="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_prompt_small"
            android:id="@+id/textView10"
            android:textSize="12sp"
            android:gravity="center" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/white_rounded_view"
                android:orientation="vertical"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/login_username" />

                <EditText
                    android:id="@+id/login_username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ellipsize="start"
                    android:gravity="left"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/login_password" />

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ellipsize="start"
                    android:maxLines="1"
                    android:gravity="left"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimary" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/linearForgotPass"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:paddingTop="5dp">

                    <TextView
                        android:id="@+id/forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_password_link"
                        android:textColor="@color/colorAccent" />

                   <!-- <TextView
                        android:id="@+id/no_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/no_account_link"
                        android:textColor="@color/colorAccent" />-->

                </LinearLayout>

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/circlepix_button_selector"
                    android:padding="5dp"
                    android:layout_marginBottom="10dip"
                    android:text="@string/login_log_in"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <!-- Testing only -->
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>